# placeholder-api

./: README.md
.github/workflows/: ci.yaml
djangotutorial/: .dockerignore  .gitignore  Dockerfile  cosmic-ray.toml  d.json  f.json  pyproject.toml
djangotutorial/dummy_api/: apps.py  models.py  permissions.py  tests.py  urls.py  views.py
djangotutorial/dummy_api/management/commands/: dummy_drop_db.py  dummy_init_db.py
djangotutorial/dummy_api/migrations/: 0001_initial.py
djangotutorial/dummy_api/serializers/: carts_serializers.py  comments_serializers.py  posts_serializers.py  products_serializers.py  profile_serializers.py  quotes_serializers.py  recipes_serializers.py  reviews_serializers.py  todos_serializers.py  users_serializers.py
djangotutorial/mysite/: base_permissions.py  settings.py  urls.py
djangotutorial/placeholder_api/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
djangotutorial/placeholder_api/management/commands/: drop_db.py  init_db.py  placeholder_drop_db.py  placeholder_init_db.py
djangotutorial/placeholder_api/migrations/: 0001_initial.py
djangotutorial/placeholder_api/serializers/: albums_serializers.py  comments_serializers.py  photos_serializers.py  posts_serializers.py  profile_serializers.py  todos_serializers.py  users_serializers.py
